cluster/manifests/cortex-api/overlays/dev/varnish/authorization_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: varnish
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: varnish
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - cortex-api
            principals:
              - cluster.local/ns/cortex-api/sa/cortex-api-ext-proc-proxy
